# ServerWeb

./: CMakeLists.txt  ManualeCostantiETest.odt  RelazioneIIW.pptx  RelazioneProgettiLinux.odt  finalTest.ods
Ezio/: imageMagikInstaller
Ezio/headers/: branchEventsHandlers.h  cacheConst.h  checkClientPercentage.h  const.h  eventsHandlers.h  fileDescriptorTransmission.h  handlerEventHandlers.h  hashFunction.h  imageMagick.h  loggingConst.h  mockRiccardo.h  parsing.h  parsingConst.h  writen.h
Ezio/src/: ImageMagick.h  cacheManager.c  cleaner.c  hashFunctionTester.c  logger.h  loggerManager.h  serverBranch.c  serverBranchesHandler.c
